// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notebookRepository getAll returns expected snapshot 1`] = `
Array [
  Object {
    "name": "Notebook 1",
  },
  Object {
    "name": "Notebook 2",
  },
]
`;

exports[`notebookRepository getById returns expected snapshot 1`] = `
Object {
  "name": "Notebook 1",
}
`;

exports[`notebookRepository getByName returns expected snapshot 1`] = `
Object {
  "name": "Notebook 1",
}
`;
